--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
